added arm project page

--- a/arm-emulator.html
+++ b/arm-emulator.html
@@ -47,50 +47,34 @@
             <div class="primary col-lg-8 col-12">
                <section class="latest section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Restaurant Ordering System</h2>
-                        <div class="content">   
-                            <br> <strong>Note:</strong> I am currently redeveloping the system in Go for production, as this project was originally completed for my A Level Computer Science coursework when I was 17. </p>
- 
-                            <p>The goal of this project was to create an ordering system for my dad's local restaurant, which includes both a Just Eat styled web app for customers and a GUI client program for kitchen staff to view the incoming orders.<br><br>
+                        <h2 class="heading">ARM11 Emulator, Assembler and Debugger</h2>
+                        <div class="content">    
+                            <p>The goal of this project was to create an emulator in C that simulates the execution of a program on an ARM11 processor, and an assembler for the ARM11 instruction set that translates assembly code into a binary executable, which can then be run on the emulator itself. <br><br>
 
-                            <strong>Technology stack:</strong>
-                            <ul>
-                              <li>
-                                Web app:
-                                <ul>
-                                  <li>Flask web framework (Python), for the web app and backend</li>
-                                  <li>SQLite3, for the database</li>
-                                  <li>HTML, CSS and JavaScript + Bootstrap, for the client side</li>
-                                </ul>
-                              </li>
-                              <li>
-                                  GUI program:
-                                  <ul>
-                                    <li>Windows Forms framework, using C#</li>
-                                  </ul>
-                                </li>
-                            </ul>
+                            The project was coded in C by a team of four first-year students (including myself) at Imperial College. We also built a GUI debugger for ARM11 binaries which runs within the terminal.
+                            <br><br>
 
-                            You can read a large sample of the original 150 page report <a href="https://drive.google.com/open?id=1vlGd1SKig8TJnhj6I_uASdiyf003aSkf">here</a>. The full document has not been uploaded to avoid plagiarism.<br><br>
+                            Here is a screenshot of the debugger's user interface:
+                            <img src="assets/images/projects/debugger.png" class="img-fluid" />
 
-                           You can<a class="more-link" href="https://github.com/thealexcons/restaurant-ordering-system" target="_blank"> view the source code on my Github </a> for the Flask web app and backend.
-
-                           <br><br>
+                            <br><br>
                            <strong>What I learnt:</strong>
                            <ul>
                                 <li>
-                                    Designing and implementing a REST API from scratch
+                                    How assemblers generate binary code
                                 </li>
                                 <li>
-                                    Working with JSON data
+                                    Using C and its low level features to emulate a real processor 
                                 </li>
                                 <li>
-                                    Fundamentals of backend web development
+                                    Using Git for collaborative programming
                                 </li>
                                 <li>
-                                    Writing detailed documentation and development logs
+                                    Writing and compiling simple documents in LaTex 
                                 </li>
                             </ul>
+                            <br>
+                            Because this project is a university project, I haven't made the source code available, however please email me if you would like to see the code.
 
                         </div><!--//content-->  
                     </div><!--//section-inner-->                
