--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                         <div class="content">    
                             
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="food-delivery-app.html">
-                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/project-2.png" alt="project name" />
+                                <a class="col-md-4 col-12" href="arm-emulator.html">
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/arm-emulator-2.jpg" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title">[WIP] Full Stack Food Delivery Mobile App</h3>
-                                    <p class="mb-2">Building a mobile app for iOS and Android with a clean and intuitive UI, local storage, a secure payment gateway and integration with a custom-built backend to notify the restaurant of placed orders.</p>
+                                    <h3 class="title">ARM11 Emulator, Assembler and Debugger</h3>
+                                    <p class="mb-2">Built an emulator that simulates the execution of an ARM11 binary executable and an assembler to translate a subset of ARM11 assembly code into binary code which can be run by the emulator. Then built a text user-interface terminal debugger with breakpoints and line stepping, based on GDB.</p>
+                                    <p><a class="more-link" href="arm-emulator.html"><i class="fas fa-file-alt"></i>Read report</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
                             
