wrote mediochat description (needs link to youtube video demo) and updated CV

--- a/arm-emulator.html
+++ b/arm-emulator.html
@@ -89,7 +89,7 @@
                         <h2 class="heading">About</h2>
                         <div class="content">
                             <p class="intro">
-                                I'm a first year MEng Computing student at Imperial College London actively looking for summer internships in the industry.
+                                I'm a second year MEng Computing student at Imperial College London actively looking for summer internships in the industry.
                             </p>
 
                             <b><a href="assets/docs/cv.pdf">You can view my CV here</a></b>
