--- a/mediochat.html
+++ b/mediochat.html
@@ -73,9 +73,8 @@
                             </p>
 
                             The video below shows how the web app works:
-                            <!-- 16:9 aspect ratio -->
                             <div class="embed-responsive embed-responsive-16by9" style="margin-top: 10px;">
-                                <iframe class="embed-responsive-item" src="//www.youtube.com/embed/YE7VzlLtp-4"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rpwWtftGP98" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <br>
                             <p>Some ideas to improve the project in the future are: support for other browsers/platforms (ie: mobile), conversation transcript generation (using ML)...</p>
