--- a/arm-emulator.html
+++ b/arm-emulator.html
@@ -74,7 +74,7 @@
                                 </li>
                             </ul>
                             <br>
-                            Because this project is a university project, I haven't made the source code available, however please email me if you would like to see the code.
+                            Because this project is a university project, I haven't made the source code available to avoid plagiarism, <b>however please email me if you would like to see the code.</b>
 
                         </div><!--//content-->  
                     </div><!--//section-inner-->                
