--- a/index.html
+++ b/index.html
@@ -51,15 +51,14 @@
                         <div class="content">  
 				
 				<div class="item row">
-				    <a class="col-md-4 col-12" href="mediochat.html">
-				    <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/mediochat.png" alt="project name" />
+				    <a class="col-md-4 col-12" href="pintos.html">
+				    <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/pintos.png" alt="project name" />
 				    </a>
 				    <div class="desc col-md-8 col-12">
 					<h3 class="title">Pintos: x86 Operating System</h3>
 					<p class="mb-2">Developed the core components of an operating system's kernel, including a thread scheduler for multi-threading, loading user programs and a virtual memory system completely from scratch.</p>
 					<p> 
-					    <a class="more-link" href="mediochat.html"><i class="fas fa-file-alt"></i>Read report</a> &nbsp &nbsp &nbsp
-					    <a class="more-link" href="https://mediochat.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i>Visit</a>
+					    <a class="more-link" href="pintos.html"><i class="fas fa-file-alt"></i>Read report</a> &nbsp &nbsp &nbsp
 					</p>
 				    </div><!--//desc-->                          
 				</div><!--//item-->
