Fixed .png extension

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="wacc.html">
-                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/wacc.png" alt="project name" />
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/wacc.PNG" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                 <h3 class="title">WACC Compiler</h3>
