--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                 <h3 class="title">WACC Compiler</h3>
-                                <p class="mb-2">Developed a compiler for a simple imperative statically-typed programming language called WACC, including classes, interfaces and generic function parameters.</p>
+                                <p class="mb-2">Developed a compiler for a simple imperative statically-typed programming language called WACC, with language features such as classes, interfaces and generic function parameters.</p>
                                 <p> 
                                     <a class="more-link" href="wacc.html"><i class="fas fa-file-alt"></i>Read report</a> &nbsp &nbsp &nbsp
                                 </p>
