Completed WACC description

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
                         <h2 class="heading">Projects</h2>
                         <div class="content">  
 
+<!--                             <div class="item row">
+                                <a class="col-md-4 col-12" href="wacc.html">
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/debugger.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                <h3 class="title">UNIX Debugger</h3>
+                                <p class="mb-2">Developed a command-line debugger for x64 UNIX executables, with support for source and assembly level stepping, breakpoints, etc. similar to GDB. Written in C++ using the ptrace system API.</p>
+                                <p> 
+                                    <a class="more-link" href="debugger.html"><i class="fas fa-file-alt"></i>Read report</a> &nbsp &nbsp &nbsp
+                                    <a class="more-link" href="https://github.com/thealexcons/linux-debugger" target="_blank"><i class="fab fa-github-alt"></i>View on GitHub</a>
+                                </p>
+                                </div>                         
+                            </div>-->
+
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="wacc.html">
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/wacc.PNG" alt="project name" />
@@ -57,6 +71,7 @@
                                 <p class="mb-2">Developed a compiler for a simple imperative statically-typed programming language called WACC, with language features such as classes, interfaces and generic function parameters.</p>
                                 <p> 
                                     <a class="more-link" href="wacc.html"><i class="fas fa-file-alt"></i>Read report</a> &nbsp &nbsp &nbsp
+                                    <a class="more-link" href="https://github.com/thealexcons/wacc-compiler" target="_blank"><i class="fab fa-github-alt"></i>View on GitHub</a>
                                 </p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
@@ -93,8 +108,8 @@
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/arm-emulator-2.jpg" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title">ARM11 Emulator, Assembler and Debugger</h3>
-                                    <p class="mb-2">Built an emulator that simulates the execution of an ARM11 binary executable and an assembler to translate a subset of ARM11 assembly code into binary code which can be run by the emulator. Then built a text user-interface terminal debugger with breakpoints and line stepping, based on GDB.</p>
+                                    <h3 class="title">ARM11 Emulator and Assembler</h3>
+                                    <p class="mb-2">Built an emulator that simulates the execution of an ARM11 binary executable and an assembler to translate a subset of ARM11 assembly code into binary code which can be run by the emulator. Extended with a text user-interface terminal debugger with breakpoints and line stepping.</p>
                                     <p><a class="more-link" href="arm-emulator.html"><i class="fas fa-file-alt"></i>Read report</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
@@ -127,7 +142,7 @@
                         <h2 class="heading">About</h2>
                         <div class="content">
                             <p class="intro">
-                                I'm a second year MEng Computing student at Imperial College London actively looking for summer internships in the industry.
+                                I'm a third year MEng Computing student at Imperial College London, currently interning at Bloomberg as a Software Engineer.
                             </p>
 
                             <b><a href="assets/docs/cv.pdf">You can view my CV here</a></b>
