--- a/restaurant-ordering-system.html
+++ b/restaurant-ordering-system.html
@@ -104,7 +104,7 @@
                         <h2 class="heading">About</h2>
                         <div class="content">
                             <p class="intro">
-                                I'm a second year MEng Computing student at Imperial College London actively looking for summer internships in the industry.
+                                I'm a third year MEng Computing student at Imperial College London, currently interning at Bloomberg as a Software Engineer.
                             </p>
 
                             <b><a href="assets/docs/cv.pdf">You can view my CV here</a></b>
