--- a/wacc.html
+++ b/wacc.html
@@ -49,18 +49,37 @@
                         <h2 class="heading">WACC Compiler</h2>
                         <div class="content">    
                             <p>
-                                TODO
+                                WACC is a simple imperative and statically-typed programming language, supporting a variety of common features and constructs. In a team of four students, we built a compiler from scratch using Scala that produces ARM assembly code from WACC source code. We decided to use a cutting-edge <a href="https://github.com/j-mie6/Parsley" target="_blank">parser combinator library</a> for Scala on the frontend and wrote the code generator and semantic analysis by hand. The compiler will also output any compilation errors such as syntax or semantic errors.<br>
+                                As an extension to the original language specifications, we added a range of new features, including simple classes with fields and methods, interfaces and generic type parameters for functions.
                                 <br><br>
                                 Some of the main language features are:
                                 <ul>
                                     <li>
-                                        TODO
+                                        Classes with public/private fields and methods
+                                    </li>
+                                    <li>
+                                        Generic type parameters for (non-method) functions with type constraints
+                                    </li>
+                                    <li>
+                                        Interfaces (like in Java)
+                                    </li>
+                                    <li>
+                                        Loops
+                                    </li>
+                                    <li>
+                                        Arrays and pairs/tuples
+                                    </li>
+                                    <li>
+                                        Simple types: integers, booleans, strings and characters
+                                    </li>
+                                    <li>
+                                        I/O functions: printing and reading from/to stdout/stdin
                                     </li>
                                 </ul>
                             </p>
 
-                            TODO: show some example code snippets
-                            <br>
+                            Some example WACC programs can be viewed in this <a href="https://gitlab.doc.ic.ac.uk/tcb19/wacc_examples/-/tree/master/valid" target="_blank">repository</a>.
+                            <br><br>
                            <strong>What I learnt:</strong>
                            <ul>
                                 <li>
@@ -79,8 +98,7 @@
                                     A more detailed understanding of assembly code and invoking LibC functions using the Linux ABI
                                 </li>
                             </ul>
-                            <br>
-                            The source code is currently in a private repo, however please email me if you would like to see the code.<br>
+                            The source code is available to see <a href="https://github.com/thealexcons/wacc-compiler">here</a>.<br>
 
                         </div><!--//content-->  
                     </div><!--//section-inner-->                
@@ -95,7 +113,7 @@
                         <h2 class="heading">About</h2>
                         <div class="content">
                             <p class="intro">
-                                I'm a second year MEng Computing student at Imperial College London actively looking for summer internships in the industry.
+                                I'm a third year MEng Computing student at Imperial College London, currently interning at Bloomberg as a Software Engineer.
                             </p>
 
                             <b><a href="assets/docs/cv.pdf">You can view my CV here</a></b>
