--- a/wacc.html
+++ b/wacc.html
@@ -113,8 +113,8 @@
                         <h2 class="heading">About</h2>
                         <div class="content">
                             <p class="intro">
-                                I'm a third year MEng Computing student at Imperial College London, currently interning at Bloomberg as a Software Engineer.
-                            </p>
+                                I'm a third year MEng Computing student at Imperial College London interested in systems programming, in particular, low latency and distributed systems.
+				I have previously interned at Bloomberg as a software engineer.                            </p>
 
                             <b><a href="assets/docs/cv.pdf">You can view my CV here</a></b>
                                    
