--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@ var enable_pjax = true;
   role="article" class="post-item post no-image">
   <header class="post-item-header">
     <h2 itemprop="name" class="post-item-title">
-      <a href="performance-comparison-of-virtual-calls-and-static-dispatch/index.html" itemprop="url" data-pjax title="Performance comparison between virtual calls and static dispatch">
+      <a href="performance-virtual-calls-and-static-dispatch/index.html" itemprop="url" data-pjax title="Performance comparison between virtual calls and static dispatch">
         Performance comparison between virtual calls and static dispatch
       </a>
     </h2>
   </header>
   <section itemprop="description" class="post-item-excerpt">
-    <p>BackgroundVirtual functions in C++ is the most popular way to achieve polymorphism. Any class with a virtual member function declaration will cause the compiler to add an a pointer to every instance of the class.&hellip;</p>
+    <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.&hellip;</p>
   </section>
   <footer class="post-item-footer">
     <ul class="post-item-meta-list">
@@ -214,7 +214,7 @@ var enable_pjax = true;
         </time>
       </li>
       <li class="post-item-meta-item">
-        <a href="performance-comparison-of-virtual-calls-and-static-dispatch/index.html#disqus_thread" data-pjax data-disqus-identifier="6252a96bbd2eee15d02f77fb">Comments</a>
+        <a href="performance-virtual-calls-and-static-dispatch/index.html#disqus_thread" data-pjax data-disqus-identifier="6252a96bbd2eee15d02f77fb">Comments</a>
       </li>
     </ul>
   </footer>
