--- a/articles.html
+++ b/articles.html
@@ -29,33 +29,39 @@
 
         <div class="article-preview">
             <h3>Implementing pattern matching in C++17</h3>
-            <div class="article-meta">posted: 18.01.2025</div>
+            <div class="article-meta">posted: 21.05.2022</div>
             <p>A short post on how to implement type-based pattern matching using C++17 features.</p>
             <a href="article2.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Performance comparison between virtual calls and static dispatch</h3>
-            <div class="article-meta">posted: 15.01.2025</div>
+            <div class="article-meta">posted: 10.04.2022</div>
             <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.</p>
             <a href="article3.html" class="read-more">Read Post</a>
         </div>
-        <br>
-        <!-- About Page Content -->
-        <div class="profile-section">
-            <div>
-                <h2>About Me</h2>
-                <p>Hi there! I'm a software developer focused on web technologies and system architecture. I love exploring new technologies and sharing what I learn.</p>
-                
-                <p>Tech Stack:</p>
-                <p>Frontend (React, Vue.js, TypeScript), Backend (Node.js, Python, Go), Cloud (AWS, Docker, Kubernetes)</p>
-            </div>
+
+        <div class="article-preview">
+            <h3>Introduction to lock-free programming</h3>
+            <div class="article-meta">posted: 03.01.2022</div>
+            <p>An attempt to explain the fundamental concepts required to write lock-free programs.</p>
+            <a href="article3.html" class="read-more">Read Post</a>
         </div>
 
-        <div class="social-links">
-            <a href="https://github.com/thealexcons">GitHub</a>
-            <a href="https://linkedin.com/in/alexconstantin-gomez">LinkedIn</a>
+        <div class="article-preview">
+            <h3>Writing custom memory allocators in C++</h3>
+            <div class="article-meta">posted: 30.12.2021</div>
+            <p>Examples of custom memory allocators are implemented in C++ and their benefits.</p>
+            <a href="article3.html" class="read-more">Read Post</a>
         </div>
+
+        <div class="article-preview">
+            <h3>A cache-friendly SPSC queue for low-latency message passing</h3>
+            <div class="article-meta">posted: 28.12.2021</div>
+            <p>An implementation of a cache-optimised SPSC queue, for high-throughput message passing.</p>
+            <a href="article3.html" class="read-more">Read Post</a>
+        </div>
+
     </main>
 
     <!-- Prism.js scripts -->
