--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <h3 class="timeline-title">Software Engineer</h3>
                 <div class="timeline-company">OxFORD Asset Management</div>
                 <div class="timeline-description">
-                    Working on trading systems with C++ and Python.
+                    Working on trading systems using C++ and Python.
                 </div>
             </div>
 
@@ -41,7 +41,7 @@
                 <h3 class="timeline-title">Software Engineer Intern</h3>
                 <div class="timeline-company">Bloomberg</div>
                 <div class="timeline-description">
-                    Modernised several reference data parsers for several EMEA stock exchanges using C++.
+                    Modernised reference data parsers for several EMEA stock exchanges using C++.
                 </div>
             </div>
 
@@ -57,7 +57,6 @@
 
         <div class="social-links">
             <a href="https://github.com/yourusername">GitHub</a>
-            <a href="https://twitter.com/yourusername">Twitter</a>
             <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
         </div>
     </main>
