--- a/articles.html
+++ b/articles.html
@@ -23,42 +23,42 @@
             <h3>Interesting compiler attributes in modern C++</h3>
             <div class="article-meta">posted: 20.01.2025</div>
             <p>A short reference post with some interesting and useful attributes available in modern C++.</p>
-            <a href="article1.html" class="read-more">Read Post</a>
+            <a href="articles/compiler-attributes.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Implementing pattern matching in C++17</h3>
             <div class="article-meta">posted: 21.05.2022</div>
             <p>A short post on how to implement type-based pattern matching using C++17 features.</p>
-            <a href="article2.html" class="read-more">Read Post</a>
+            <a href="articles/pattern-matching-cpp.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Performance comparison between virtual calls and static dispatch</h3>
             <div class="article-meta">posted: 10.04.2022</div>
             <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.</p>
-            <a href="article3.html" class="read-more">Read Post</a>
+            <a href="articles/comparison-virtual-static.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Introduction to lock-free programming</h3>
             <div class="article-meta">posted: 03.01.2022</div>
             <p>An attempt to explain the fundamental concepts required to write lock-free programs.</p>
-            <a href="article3.html" class="read-more">Read Post</a>
+            <a href="articles/intro-lock-free.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Writing custom memory allocators in C++</h3>
             <div class="article-meta">posted: 30.12.2021</div>
             <p>Examples of custom memory allocators are implemented in C++ and their benefits.</p>
-            <a href="article3.html" class="read-more">Read Post</a>
+            <a href="articles/memory-allocators.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>A cache-friendly SPSC queue for low-latency message passing</h3>
             <div class="article-meta">posted: 28.12.2021</div>
             <p>An implementation of a cache-optimised SPSC queue, for high-throughput message passing.</p>
-            <a href="article3.html" class="read-more">Read Post</a>
+            <a href="articles/spsc-queue.html" class="read-more">Read Post</a>
         </div>
 
     </main>
