--- a/index_new.html
+++ b/index_new.html
@@ -18,28 +18,28 @@
     </header>
 
     <main>
-        <!-- Articles Page Content -->
-         <h2>Recent articles</h2>
+        <h2>Recent articles</h2>
         <div class="article-preview">
             <h3>Interesting compiler attributes in modern C++</h3>
             <div class="article-meta">posted: 20.01.2025</div>
             <p>A short reference post with some interesting and useful attributes available in modern C++.</p>
-            <a href="article1.html" class="read-more">Read Post</a>
+            <a href="articles/compiler-attributes.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Implementing pattern matching in C++17</h3>
-            <div class="article-meta">posted: 18.01.2025</div>
+            <div class="article-meta">posted: 21.05.2022</div>
             <p>A short post on how to implement type-based pattern matching using C++17 features.</p>
-            <a href="article2.html" class="read-more">Read Post</a>
+            <a href="articles/pattern-matching-cpp.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Performance comparison between virtual calls and static dispatch</h3>
-            <div class="article-meta">posted: 15.01.2025</div>
+            <div class="article-meta">posted: 10.04.2022</div>
             <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.</p>
-            <a href="article3.html" class="read-more">Read Post</a>
+            <a href="articles/comparison-virtual-static.html" class="read-more">Read Post</a>
         </div>
+
         <br>
         <!-- About Page Content -->
         <div class="profile-section">
