add attributes article

--- a/articles.html
+++ b/articles.html
@@ -5,60 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Constantin-Gomez</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
         <h1>Alex Constantin-Gomez</h1>
         <nav>
-            <a href="index.html">home</a>
-            <a href="articles.html">articles</a>
-            <a href="about.html">about</a>
+            <a href="/index.html">home</a>
+            <a href="/articles.html">articles</a>
+            <a href="/about.html">about</a>
         </nav>
     </header>
 
     <main>
         <!-- Articles Page Content -->
         <div class="article-preview">
-            <h3>Interesting compiler attributes in modern C++</h3>
+            <h3>Performance-oriented C++ attributes</h3>
             <div class="article-meta">posted: 20.01.2025</div>
-            <p>A short reference post with some interesting and useful attributes available in modern C++.</p>
-            <a href="articles/compiler-attributes.html" class="read-more">Read Post</a>
+            <p>A short reference post with some interesting and useful attributes for performance optimisation available in modern C++.</p>
+            <a href="/articles/compiler-attributes.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Implementing pattern matching in C++17</h3>
             <div class="article-meta">posted: 21.05.2022</div>
             <p>A short post on how to implement type-based pattern matching using C++17 features.</p>
-            <a href="articles/pattern-matching-cpp.html" class="read-more">Read Post</a>
+            <a href="/articles/pattern-matching-cpp.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Performance comparison between virtual calls and static dispatch</h3>
             <div class="article-meta">posted: 10.04.2022</div>
             <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.</p>
-            <a href="articles/comparison-virtual-static.html" class="read-more">Read Post</a>
+            <a href="/articles/comparison-virtual-static.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Introduction to lock-free programming</h3>
             <div class="article-meta">posted: 03.01.2022</div>
             <p>An attempt to explain the fundamental concepts required to write lock-free programs.</p>
-            <a href="articles/intro-lock-free.html" class="read-more">Read Post</a>
+            <a href="/articles/intro-lock-free.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>Writing custom memory allocators in C++</h3>
             <div class="article-meta">posted: 30.12.2021</div>
             <p>Examples of custom memory allocators are implemented in C++ and their benefits.</p>
-            <a href="articles/memory-allocators.html" class="read-more">Read Post</a>
+            <a href="/articles/memory-allocators.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>A cache-friendly SPSC queue for low-latency message passing</h3>
             <div class="article-meta">posted: 28.12.2021</div>
             <p>An implementation of a cache-optimised SPSC queue, for high-throughput message passing.</p>
-            <a href="articles/spsc-queue.html" class="read-more">Read Post</a>
+            <a href="/articles/spsc-queue.html" class="read-more">Read Post</a>
         </div>
 
     </main>
