--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Constantin-Gomez</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
         <h1>Alex Constantin-Gomez</h1>
         <nav>
-            <a href="index.html">home</a>
-            <a href="articles.html">articles</a>
-            <a href="about.html">about</a>
+            <a href="/index.html">home</a>
+            <a href="/articles.html">articles</a>
+            <a href="/about.html">about</a>
         </nav>
     </header>
 
