replaced index.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div class="profile-section">
             <div>
                 <h2>About Me</h2>
-                <p>Hi there! I'm a software developer focused on web technologies and system architecture. I love exploring new technologies and sharing what I learn.</p>
+                <p>I am a software engineer currently working in the quantitative trading industry, after having graduated with a MEng Computing degree from Imperial College London. I am mostly interested in low-level systems programming, including topics such as concurrency, operating systems and high-performance software.</p>
             </div>
         </div>
 
