--- a/articles.html
+++ b/articles.html
@@ -51,14 +51,16 @@
             <h3>Writing custom memory allocators in C++</h3>
             <div class="article-meta">posted: 30.12.2021</div>
             <p>Examples of custom memory allocators are implemented in C++ and their benefits.</p>
-            <a href="/articles/memory-allocators.html" class="read-more">Read Post</a>
+            <!-- <a href="/articles/memory-allocators.html" class="read-more">Read Post</a> -->
+            <a href="/custom-memory-allocators/index.html" class="read-more">Read Post</a>
         </div>
 
         <div class="article-preview">
             <h3>A cache-friendly SPSC queue for low-latency message passing</h3>
             <div class="article-meta">posted: 28.12.2021</div>
             <p>An implementation of a cache-optimised SPSC queue, for high-throughput message passing.</p>
-            <a href="/articles/spsc-queue.html" class="read-more">Read Post</a>
+            <!-- <a href="/articles/spsc-queue.html" class="read-more">Read Post</a> -->
+            <a href="/spsc-queue/index.html" class="read-more">Read Post</a>
         </div>
 
     </main>
