--- a/about.html
+++ b/about.html
@@ -53,6 +53,15 @@
                     Learned about order books and testing them using behaviour-driven development in Python.
                 </div>
             </div>
+
+            <div class="timeline-entry">
+                <div class="timeline-date">2019 - 2023</div>
+                <h3 class="timeline-title">MEng Computing Undergraduate</h3>
+                <div class="timeline-company">Imperial College London</div>
+                <div class="timeline-description">
+                    Read about MEng project <a href="/articles/sgbpf.html">here</a>.
+                </div>
+            </div>
         </div>
 
         <div class="social-links">
